Fix kzg computing proof segfault and update trusted setup (#6603)